--- a/package.json
+++ b/package.json
@@ -1,27 +1,42 @@
 {
-  "name": "@.//source",
+  "name": "nx-poc",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "fox-pay": "yarn nx dev fox-pay",
+    "fox-nest": "yarn nx serve fox-nest"
+  },
   "private": true,
   "dependencies": {
+    "@nestjs/common": "^10.0.2",
+    "@nestjs/core": "^10.0.2",
+    "@nestjs/platform-express": "^10.0.2",
     "@react-router/node": "^7.2.0",
     "@react-router/serve": "^7.2.0",
+    "axios": "^1.6.0",
     "isbot": "^4.4.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-router": "^7.2.0"
+    "react-router": "^7.2.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.0.2",
     "@nx/devkit": "20.8.1",
     "@nx/eslint": "20.8.1",
     "@nx/eslint-plugin": "20.8.1",
+    "@nx/jest": "20.8.1",
     "@nx/js": "20.8.1",
+    "@nx/nest": "20.8.1",
+    "@nx/node": "20.8.1",
     "@nx/playwright": "20.8.1",
     "@nx/react": "20.8.1",
     "@nx/vite": "20.8.1",
     "@nx/web": "20.8.1",
+    "@nx/webpack": "20.8.1",
     "@nx/workspace": "20.8.1",
     "@playwright/test": "^1.36.0",
     "@react-router/dev": "^7.2.0",
@@ -31,6 +46,7 @@
     "@swc/helpers": "~0.5.11",
     "@testing-library/dom": "10.4.0",
     "@testing-library/react": "16.1.0",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.0.0",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
@@ -45,19 +61,27 @@
     "eslint-plugin-playwright": "^1.6.2",
     "eslint-plugin-react": "7.35.0",
     "eslint-plugin-react-hooks": "5.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
+    "jsonc-eslint-parser": "^2.1.0",
     "nx": "20.8.1",
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
     "tailwindcss": "3.4.3",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.19.0",
     "vite": "^6.0.0",
-    "vitest": "^3.0.0"
+    "vitest": "^3.0.0",
+    "webpack-cli": "^5.1.4"
   },
   "workspaces": [
-    "apps/*"
-  ]
+    "apps/*",
+    "libs/*"
+  ],
+  "main": "index.js"
 }
