--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "private": true,
   "dependencies": {
+    "@anatine/zod-nestjs": "^2.0.12",
+    "@anatine/zod-openapi": "^2.2.8",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
@@ -19,7 +21,8 @@
     "react-dom": "19.0.0",
     "react-router": "^7.2.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
