--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,7 +17,8 @@
     "esModuleInterop": true,
     "paths": {
       "api-interfaces": ["libs/api-interfaces/src/index.ts"],
-      "math": ["libs/math/src/index.ts"]
+      "calculate": ["libs/server-utils/calculate/src/index.ts"],
+      "server-utils": ["libs/server-utils/src/index.ts"]
     }
   }
 }
